--- a/index.html
+++ b/index.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Guess the song from the intro in as little tries as possible." />
-    <meta name="google-site-verification" content="xVpzU_S4hcDgDC6k_yqco7BIolpDNfG0Cbhsm1DJsns" />
-    <meta itemprop="name" content="Video Games Heardle" />
-    <meta itemprop="description" content="Guess the song from the intro in as little tries as possible." />
-    <meta itemprop="image" content="https://keraloon.github.io/infinitevideogame/Drifloon.png" />
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Pokémon Infinite Heardle</title>
+<meta name="description" content="Guess the Pokémon song from the intro in as little tries as possible.">
+<meta itemprop="name" content="Pokémon Infinite Heardle">
+<meta itemprop="description" content="Guess the Pokémon song from the intro in as little tries as possible.">
 
 
-    <meta property="og:url" content="https://keraloon.github.io/infinitevideogame/index.html" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Video Games Heardle" />
-    <meta property="og:description" content="Guess the song from the intro in as little tries as possible." />
-    <meta property="og:image" content="https://keraloon.github.io/infinitevideogame/Drifloon.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Video Games Heardle" />
-    <meta name="twitter:description" content="Guess the song from the intro in as little tries as possible." />
-    <meta name="twitter:image" content="https://keraloon.github.io/infinitevideogame/Drifloon.png" />
+<meta property="og:url" content="https://pkmn-heardle.glitch.me/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Pokémon Infinite Heardle">
+<meta property="og:description" content="Guess the Pokémon song from the intro in as little tries as possible.">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Pokémon Infinite Heardle">
+<meta name="twitter:description" content="Guess the Pokémon song from the intro in as little tries as possible.">
+
+  
+<!-- EDIT THE content= TAGS on lines 23-25 WITH A LINK TO AN IMAGE THAT WILL SHOW UP WHEN YOU SHARE THE LINK   -->
+<meta itemprop="image" content="https://i.imgur.com/CmqSqks.png?format=jpg&name=small">
+<meta property="og:image" content="https://i.imgur.com/CmqSqks.png?format=jpg&name=small">
+<meta name="twitter:image" content="https://i.imgur.com/CmqSqks.png?format=jpg&name=small">
 
 
-    <link rel="icon" type="image/png" href="https://keraloon.github.io/infinitevideogame/Drifloon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="https://keraloon.github.io/infinitevideogame/Drifloon.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="https://keraloon.github.io/infinitevideogame/Drifloon.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="https://keraloon.github.io/infinitevideogame/Drifloon.png" />
-    <link rel="shortcut icon" href="https://keraloon.github.io/infinitevideogame/Drifloon.png" />
+<!-- EDIT THE href TAGS  on lines 29-33 WITH A LINK THATLL SHOW UP AS AN ICON IN YOUR BROWSER   -->
+<link rel="icon" type="image/png" href="https://i.imgur.com/CmqSqks.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/CmqSqks.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://i.imgur.com/CmqSqks.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://i.imgur.com/CmqSqks.png">
+<link rel="shortcut icon" href="https://i.imgur.com/CmqSqks.png">
+  
+  
+  
+<link rel="manifest" href="webmanifest.json">
+<link rel="stylesheet" href="global.css">
+<link rel="stylesheet" href="bundle.css">
 
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="stylesheet" href="global.css" />
-    <link rel="stylesheet" href="bundle.css" />
-    <script defer src="musique.js"></script> 
-    <script defer src="reponse.js"></script> 
-    <script defer src="main.js"></script>
-    <script defer src="https://w.soundcloud.com/player/api.js"></script>
-
-
-    <script>
-      if (location.protocol !== "file:" && location.protocol !== "https:") {
-        location.href =
-          "https:" +
-          window.location.href.substring(window.location.protocol.length);
-      }
-    </script>
-  </head>
+<script defer src="main.js"></script>
+<script>
+if (location.protocol != 'file:' && location.protocol != 'https:') { location.href = 'https:' + window.location.href.substring(window.location.protocol.length); }
+</script>
+</head>
   <body>
 
     <audio id="player"></audio>
