--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Pokémon Infinite Heardle</title>
+<title>Pokévent Infinite Heardle</title>
 <meta name="description" content="Guess the Pokémon song from the intro in as little tries as possible.">
 <meta itemprop="name" content="Pokémon Infinite Heardle">
 <meta itemprop="description" content="Guess the Pokémon song from the intro in as little tries as possible.">
 
 
-<meta property="og:url" content="https://pkmn-heardle.glitch.me/">
+<meta property="og:url" content="https://keraloon.github.io/pokeventinfiniteheardle/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Pokémon Infinite Heardle">
+<meta property="og:title" content="Pokévent Infinite Heardle">
 <meta property="og:description" content="Guess the Pokémon song from the intro in as little tries as possible.">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Pokémon Infinite Heardle">
+<meta name="twitter:title" content="Pokévent Infinite Heardle">
 <meta name="twitter:description" content="Guess the Pokémon song from the intro in as little tries as possible.">
 
   
