--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Pokévent Infinite Heardle</title>
 <meta name="description" content="Guess the Pokémon song from the intro in as little tries as possible.">
-<meta itemprop="name" content="Pokémon Infinite Heardle">
+<meta itemprop="name" content="Pokévent Infinite Heardle">
 <meta itemprop="description" content="Guess the Pokémon song from the intro in as little tries as possible.">
 
 
